--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   video_player: ^2.8.2
   flutter_camera: ^1.0.0
   firebase_storage: ^11.6.0
+  geolocator: ^10.1.0
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
